# RAI-Holdings-OS

./: .gitignore  DEPLOY.md  README.md  SUBMISSION_GUIDELINES.md  open-next.config.ts  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
.claude/: launch.json
.github/workflows/: desktop-release.yml  mobile-release.yml
admin/: .env.example  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
admin/src/: App.tsx  accessControlProvider.ts  authProvider.ts  i18nProvider.ts  supabaseClient.ts  theme.ts
app-hub/: index.html  package-lock.json  package.json
app-hub/public/: releases.json
app-hub/src/: App.tsx  index.css
cli/: README.md  rai-mcp-publisher.mjs
deploy/: README.md  admin-setup.sh  app-hub-deploy.sh  apply-workspace-sql.sh  gateway-key.sh  gateway-recreate-test.sh  gcp-provision.sh  ops-setup.sh  supabase-up.sh
desktop/: .gitignore  README.md
desktop/shell/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: admin.md  rai-app-hub-spec.md
extension/: .gitignore  README.md  build.mjs  package.json
extension/src/: background.js  manifest.base.json  (+5 more)
gateway/: .env.example  Caddyfile.example  Dockerfile  README.md  SETUP.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  railway.json  tsconfig.json
legacy/: index.html
mobile/: .gitignore  PUBLISH.md  README.md  capacitor.config.ts  package.json
public/: manifest.webmanifest  sw.js
src/: middleware.ts
(+358 files in other folders)
