[package]
name = "rai-os"
version = "1.4.0"
description = "RAI OS — Hệ điều hành doanh nghiệp AI-Native"
authors = ["RAI Holdings"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
